--- a/app/src/main/res/drawable/button_main.xml
+++ b/app/src/main/res/drawable/button_main.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="14dp"
-        />
-    <gradient
-        android:angle="45"
-        android:centerX="35%"
-        android:centerColor="#03D5FF"
-        android:startColor="#00dfff"
-        android:endColor="#00C5FF"
-        android:type="linear"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="270dp"
-        android:height="60dp"
-        />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorPrimaryDark">
+    <item>
+        <shape android:shape="rectangle" >
+            <corners
+                android:radius="2dp"
+                />
+            <solid
+                android:color="@color/colorPrimary"
+                />
+            <padding
+                android:left="0dp"
+                android:top="0dp"
+                android:right="0dp"
+                android:bottom="0dp"
+                />
+            <size
+                android:width="270dp"
+                android:height="60dp"
+                />
+        </shape>
+    </item>
+</ripple>
