--- a/app/src/main/res/drawable/gender_switch_thumb.xml
+++ b/app/src/main/res/drawable/gender_switch_thumb.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/switch_thumb_color" />
+            <corners android:radius="2dp" />
+            <size android:width="80dp"
+                android:height="40dp" />
+        </shape>
+    </item>
+</layer-list>
