--- a/app/src/main/res/drawable/gender_switch_track.xml
+++ b/app/src/main/res/drawable/gender_switch_track.xml
@@ -1,37 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="center_vertical|fill_horizontal"
-        android:start="4dp"
-        android:end="4dp"
-        android:state_enabled="false">
+    <item android:gravity="center_vertical|fill_horizontal">
         <shape android:shape="rectangle"
-            android:tint="@color/colorComplimentaryDark">
-            <corners android:radius="2dp" />
-            <solid android:color="@color/colorComplimentary" />
-            <size android:height="20dp" />
-        </shape>
-    </item>
-    <item android:gravity="center_vertical|fill_horizontal"
-        android:start="4dp"
-        android:end="4dp"
-        android:state_checked="true">
-        <shape android:shape="rectangle"
-            android:tint="@color/colorPrimaryDark">
+            android:tint="@color/switch_color">
             <corners android:radius="2dp" />
             <solid android:color="@color/colorPrimary" />
-            <size android:height="20dp" />
+            <size android:height="40dp" />
         </shape>
     </item>
-    <item android:gravity="center_vertical|fill_horizontal"
-        android:start="4dp"
-        android:end="4dp"
-        android:state_checked="true">
-        <shape android:shape="rectangle"
-            android:tint="@color/colorPrimaryDark">
-            <corners android:radius="2dp" />
-            <solid android:color="@color/colorPrimary" />
-            <size android:height="20dp" />
-        </shape>
-    </item>
-
 </layer-list>
