--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,12 @@
         <item name="android:textColor">@color/colorText</item>
     </style>
 
+    <style name ="switchTextStyle">
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name ="Button">
         <item name="android:background">@drawable/button_main</item>
         <item name="android:layout_centerHorizontal">true</item>
