--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
-        android:layout_height="175"
+        android:layout_height="175dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/editFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_profile_white"
@@ -55,7 +55,7 @@
             android:inputType="text|textEmailAddress" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/editEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_mail_white"
@@ -87,7 +87,7 @@
         </android.support.constraint.ConstraintLayout>
 
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/editPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_lock_white"
@@ -96,7 +96,7 @@
             android:inputType="textPassword" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/editConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_lock_white"
@@ -105,7 +105,7 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/registerButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
