--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".setup.RegisterActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView4"
@@ -112,10 +112,12 @@
             android:background="@drawable/button_main"
             android:enabled="true"
             android:text="@string/finish_register"
+            android:clickable="true"
+            android:focusable="true"
             android:textColor="@color/colorText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText2" />
+            app:layout_constraintTop_toBottomOf="@id/editPasswordLogIn" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
