Did a few placeholder graphics for the select screen as a proof of concept but need to sort out the drawable folder
Signed-off-by: TuxedoFish <harryliversedge@gmail.com>

--- a/app/src/main/res/layout/fragment_search_overlay.xml
+++ b/app/src/main/res/layout/fragment_search_overlay.xml
@@ -44,7 +44,8 @@
                 android:layout_marginBottom="16dp"
                 android:adjustViewBounds="true"
                 android:background="@drawable/button_icon"
-                android:scaleType="fitXY"/>
+                android:onClick="onSearch"
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
